Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
N/A
-
None
-
Can result in hang or crash
-
Q3/2026 Server Maintenance
Description
bb-13.1-mdev-37262-hf b75702097e55151cfb
SELECT XMLISVALID( |
'<xml><c>x</c></xml>', |
'<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="xml"><xs:complexType><xs:sequence><xs:element name="c" |
type="xs:string"/></xs:sequence></xs:complexType></xs:element></xs:schema>'
|
) AS v; |
#8 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=0x6) at ./nptl/pthread_kill.c:89
|
#9 0x000070ca0fe4527e in __GI_raise (sig=sig@entry=0x6) at ../sysdeps/posix/raise.c:26
|
#10 0x000070ca0fe288ff in __GI_abort () at ./stdlib/abort.c:79
|
#11 0x000070ca0fe2881b in __assert_fail_base (fmt=0x70ca0ffd01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x574ca36e1300 "0", file=file@entry=0x574ca36e1340 "/13.1/plugin/type_xmltype/item_func_xml_isvalid.cc", line=line@entry=0xc2, function=function@entry=0x574ca36e13a0 "virtual bool XMLSchema_item::validate_tag(MY_XML_VALIDATION_DATA*, const char*, size_t)") at ./assert/assert.c:96
|
#12 0x000070ca0fe3b517 in __assert_fail (assertion=0x574ca36e1300 "0", file=0x574ca36e1340 "/13.1/plugin/type_xmltype/item_func_xml_isvalid.cc", line=0xc2, function=0x574ca36e13a0 "virtual bool XMLSchema_item::validate_tag(MY_XML_VALIDATION_DATA*, const char*, size_t)") at ./assert/assert.c:105
|
#13 0x0000574ca5c95eb0 in XMLSchema_item::validate_tag (this=<optimized out>, st=<optimized out>, attr=<optimized out>, len=<optimized out>) at /13.1/plugin/type_xmltype/item_func_xml_isvalid.cc:194
|
#14 0x0000574ca5c82557 in validation_enter (st=<optimized out>, attr=<optimized out>, len=<optimized out>) at /13.1/plugin/type_xmltype/item_func_xml_isvalid.cc:3459
|
#15 0x0000574ca5b8efc8 in my_xml_enter (st=st@entry=0x68c9f55fc230, str=0x52d000186bde "c>x</c></xml>", len=0x1) at /13.1/strings/xml.c:381
|
#16 0x0000574ca5b8fe3d in my_xml_parse (p=0x68c9f55fc230, str=<optimized out>, len=<optimized out>) at /13.1/strings/xml.c:513
|
#17 0x0000574ca5c828f6 in validate_schema (xml=(const String *) 0x52d000186c30 _latin1 ..., user_data=0x52d0001884e0) at /13.1/plugin/type_xmltype/item_func_xml_isvalid.cc:3511
|
#18 0x0000574ca5c82b0f in Item_func_xml_isvalid::val_bool (this=0x52d000187118) at /13.1/plugin/type_xmltype/item_func_xml_isvalid.cc:3525
|
#19 0x0000574ca385749f in Item_bool_func::val_int (this=0x52d000187118) at /13.1/sql/item_cmpfunc.h:245
|
#20 0x0000574ca4a89b77 in Type_handler::Item_send_long (this=<optimized out>, item=0x52d000187118, protocol=0x52c0001e0900, buf=<optimized out>) at /13.1/sql/sql_type.cc:7698
|
#21 0x0000574ca4aa3167 in Type_handler_long::Item_send (this=<optimized out>, item=<optimized out>, protocol=<optimized out>, buf=<optimized out>) at /13.1/sql/sql_type.h:6033
|
#22 0x0000574ca3851f9d in Item::send (this=0x52d000187118, protocol=0x52c0001e0900, buffer=0x68c9f57d28a0) at /13.1/sql/item.h:1238
|
#23 0x0000574ca3f73630 in Protocol::send_result_set_row (this=this@entry=0x52c0001e0900, row_items=row_items@entry=(List<Item> *) 0x52d000186980 0x1 Item's) at /13.1/sql/protocol.cc:1358
|
#24 0x0000574ca415031a in select_send::send_data (this=0x52d000187bc8, items=...) at /13.1/sql/sql_class.cc:3411
|
#25 0x0000574ca415f13a in select_result_sink::send_data_with_check (this=0x52d000187bc8, items=..., u=<optimized out>, sent=sent@entry=0x0) at /13.1/sql/sql_class.cc:3309
|
#26 0x0000574ca449f93e in JOIN::exec_inner (this=this@entry=0x52d000187c00) at /13.1/sql/sql_select.cc:4996
|
#27 0x0000574ca44a0d94 in JOIN::exec (this=this@entry=0x52d000187c00) at /13.1/sql/sql_select.cc:4913
|
#28 0x0000574ca449c717 in mysql_select (thd=thd@entry=0x52c0001e0220, tables=<optimized out>, fields=..., conds=<optimized out>, og_num=<optimized out>, order=<optimized out>, group=<optimized out>, having=<optimized out>, proc_param=<optimized out>, select_options=<optimized out>, result=<optimized out>, unit=<optimized out>, select_lex=<optimized out>) at /13.1/sql/sql_select.cc:5439
|
#29 0x0000574ca449cf23 in handle_select (thd=thd@entry=0x52c0001e0220, lex=lex@entry=0x52c0001e4860, result=result@entry=0x52d000187bc8, setup_tables_done_option=setup_tables_done_option@entry=0x0) at /13.1/sql/sql_select.cc:636
|
#30 0x0000574ca42d13ea in execute_sqlcom_select (thd=thd@entry=0x52c0001e0220, all_tables=<optimized out>) at /13.1/sql/sql_parse.cc:6217
|
#31 0x0000574ca42f0110 in mysql_execute_command (thd=thd@entry=0x52c0001e0220, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=0x0) at /13.1/sql/sql_parse.cc:3991
|
#32 0x0000574ca42fd7d4 in mysql_parse (thd=thd@entry=0x52c0001e0220, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x68c9f59b81a0) at /13.1/sql/sql_parse.cc:7945
|
#33 0x0000574ca4301584 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x52c0001e0220, packet=packet@entry=0x52900022b221 "", packet_length=packet_length@entry=0x102, blocking=blocking@entry=0x1) at /13.1/sql/sql_parse.cc:1903
|
#34 0x0000574ca430631e in do_command (thd=thd@entry=0x52c0001e0220, blocking=blocking@entry=0x1) at /13.1/sql/sql_parse.cc:1437
|
#35 0x0000574ca47ea0be in do_handle_one_connection (connect=<optimized out>, connect@entry=0x50b000005de0, put_in_cache=put_in_cache@entry=0x1) at /13.1/sql/sql_connect.cc:1503
|
#36 0x0000574ca47ea5a3 in handle_one_connection (arg=arg@entry=0x50b000005de0) at /13.1/sql/sql_connect.cc:1415
|
#37 0x0000574ca4def8c4 in pfs_spawn_thread (arg=arg@entry=0x517000009720) at /13.1/storage/perfschema/pfs.cc:2198
|
#38 0x000070ca10e5ea42 in asan_thread_start (arg=0x68c9f689c000) at ../../../../src/libsanitizer/asan/asan_interceptors.cpp:234
|
#39 0x000070ca0fe9caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
|
#40 0x000070ca0ff29c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
Attachments
Issue Links
- is caused by
-
MDEV-37262 XMLISVALID() schema validation function
-
- In Testing
-